# clients

./: Cargo.toml  README.md
project/contact/rust/contact-avatar/: BUILD.bazel  Cargo.toml
project/contact/rust/contact-avatar/src/: lib.rs
project/contact/rust/contact-database/: BUILD.bazel  Cargo.toml
project/contact/rust/contact-database/src/: contact.rs  contact_card.rs  contact_email.rs  contact_group.rs  lib.rs
project/contact/rust/contact-device/: BUILD.bazel  Cargo.toml
project/contact/rust/contact-device/src/: lib.rs
project/contact/rust/contact-lattice/: BUILD.bazel  Cargo.toml
project/contact/rust/contact-lattice/src/: delete_contact_group.rs  get_contact.rs  get_contact_events.rs  get_contact_group.rs  get_contacts_emails.rs  lib.rs  post_contact_group.rs  put_contact_group.rs  put_delete_contacts.rs
project/contact/rust/contact-list/: BUILD.bazel  Cargo.toml
project/contact/rust/contact-list/src/: lib.rs  tests.rs
project/core/rust/core-event-loop/: BUILD.bazel  Cargo.toml
project/core/rust/core-event-loop/examples/: v6.rs
project/core/rust/core-event-loop/src/: lib.rs  provider.rs  store.rs  v6.rs
project/core/rust/core-feature-flags/: BUILD.bazel  Cargo.toml
project/core/rust/core-feature-flags/src/: lib.rs  types.rs
project/core/rust/core-key/: BUILD.bazel  Cargo.toml
project/core/rust/core-key/src/: error.rs  keys_setup.rs  lib.rs
project/core/rust/core-sensitive-data/: BUILD.bazel  Cargo.toml
project/core/rust/core-sensitive-data/src/: lib.rs
project/core/rust/core-telemetry/: .gitignore  BUILD.bazel  Cargo.toml  README.md  build-android.sh  uniffi.toml
project/core/rust/core-telemetry/src/: client.rs  ffi.rs  http.rs  lib.rs  queries.rs  storage.rs
project/core/rust/lattice/: BUILD.bazel  Cargo.toml  build.rs
project/core/rust/lattice-muon1/: BUILD.bazel  Cargo.toml
project/core/rust/lattice-muon1/src/: error.rs  ext.rs  lib.rs  transport.rs  wire.rs
project/core/rust/lattice-quark/: BUILD.bazel  Cargo.toml
project/core/rust/lattice-quark/src/: lib.rs
project/core/rust/lattice/docs/: CONTRACTS.md
project/core/rust/lattice/src/: api_definitions.rs  error.rs  helpers.rs  lib.rs  method.rs  muon.rs  sensitive.rs
project/core/rust/lattice/tests/: auth.rs  auth_devices.rs  auth_devices_approval.rs  auth_devices_approval_negative.rs  errors.rs  organization.rs  quark.rs  sso.rs  sso_cert.pem  unprivatization.rs  user.rs  user_settings.rs
project/mail/rust/: .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  BUILD.bazel  CODEOWNERS  Cargo.toml  README.md  cliff.toml  deny.toml  devenv.nix  devenv.yaml  foo  rust-toolchain.toml  taplo.toml
project/mail/rust/.cargo/: audit.toml  config.toml
project/mail/rust/.config/: nextest.toml
project/mail/rust/.jjconflict-base-0/: .publishignore  taplo.toml
project/mail/rust/.jjconflict-base-0/.cargo/: config.toml
project/mail/rust/.jjconflict-base-0/docs/: README.md
project/mail/rust/.jjconflict-side-0/: Cargo.toml  devenv.nix
project/mail/rust/.jjconflict-side-1/: CODEOWNERS  clippy.toml  devenv.yaml
project/mail/rust/.jjconflict-side-1/.gitlab/: CODEOWNERS
project/mail/rust/.jjconflict-side-1/crypto/: README.md
project/mail/rust/.jjconflict-side-1/rust-build/: README.md  build_ios_framework_uniffi.sh
project/mail/rust/account/account-api/: BUILD.bazel  Cargo.toml
project/mail/rust/account/account-common/: BUILD.bazel  Cargo.toml
project/mail/rust/account/account-ids/: BUILD.bazel  Cargo.toml
project/mail/rust/account/account-uniffi/: BUILD.bazel  Cargo.toml
project/mail/rust/api/mail-api-bug-report/: BUILD.bazel  Cargo.toml
project/mail/rust/api/mail-api-device/: BUILD.bazel  Cargo.toml
project/mail/rust/api/mail-api-event-types/: BUILD.bazel  Cargo.toml
project/mail/rust/api/mail-api-feature-flags/: BUILD.bazel  Cargo.toml
project/mail/rust/api/mail-api-labels/: BUILD.bazel  Cargo.toml
project/mail/rust/api/mail-api-lattice/: BUILD.bazel  Cargo.toml
project/mail/rust/api/mail-api-payments/: BUILD.bazel  Cargo.toml
project/mail/rust/api/mail-api-ping/: BUILD.bazel  Cargo.toml
project/mail/rust/api/mail-api-session/: BUILD.bazel  Cargo.toml
project/mail/rust/api/mail-api-shared/: BUILD.bazel  Cargo.toml
project/mail/rust/calendar/calendar-api/: BUILD.bazel  Cargo.toml
project/mail/rust/calendar/calendar-common/: BUILD.bazel  Cargo.toml
project/mail/rust/contacts/contacts-api/: BUILD.bazel  Cargo.toml
project/mail/rust/contacts/contacts-common/: BUILD.bazel  Cargo.toml
project/mail/rust/core/: .gitlab-ci.yml  Cargo.toml  README.md
project/mail/rust/core/.cargo/: config.toml
project/mail/rust/core/action-queue/: Cargo.toml
project/mail/rust/core/core-api/: BUILD.bazel  Cargo.toml
project/mail/rust/core/core-common/: BUILD.bazel  Cargo.toml
project/mail/rust/core/core-key-manager/: BUILD.bazel  Cargo.toml
project/mail/rust/core/core-test-utils/: Cargo.toml
project/mail/rust/core/event-loop/: Cargo.toml
project/mail/rust/core/ical/: CMakeLists.txt  Cargo.toml  LICENSE  README.md
project/mail/rust/core/ical-cli/: Cargo.toml
project/mail/rust/core/labels-common/: BUILD.bazel  Cargo.toml
project/mail/rust/core/log-service/: Cargo.toml
project/mail/rust/core/proton-action-queue/: Cargo.toml
project/mail/rust/core/proton-api-core/: Cargo.toml
project/mail/rust/core/proton-async/: Cargo.toml
project/mail/rust/core/proton-canonical-email/: Cargo.toml
project/mail/rust/core/proton-core-common/: Cargo.toml
project/mail/rust/core/proton-core-db/: Cargo.toml
project/mail/rust/core/proton-event-loop/: Cargo.toml
project/mail/rust/core/proton-sqlite3/: Cargo.toml
project/mail/rust/crypto/: README.md
project/mail/rust/mail/: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  clippy.toml
project/mail/rust/rust-build/: README.md  build_android.sh  build_ios_framework_uniffi.sh  build_macos_framework_uniffi.sh  rust-ci.yml
project/mail/rust/test-utils/: Cargo.toml
project/mail/rust/xtask/: Cargo.toml
tools/uniffi-bindgen/: BUILD.bazel  Cargo.toml
tools/uniffi-bindgen/src/: main.rs
(+4304 files in other folders)
