[workspace]
  members = [
    "project/account/rust/account*",
    "project/core/rust/core-*",
    "project/core/rust/lattice",
    "tools/uniffi-bindgen",
  ]
  resolver = "3"

[workspace.package]
  edition = "2024"

[workspace.dependencies.account-crux]
  path = "project/account/rust/account-crux"
  features = ["facet_typegen"]

[workspace.dependencies.account-crux-client-info]
  path = "project/account/rust/account-crux-client-info"

[workspace.dependencies.account-db]
  path = "project/account/rust/account-db"

[workspace.dependencies.account-in-memory-db]
  path = "project/account/rust/account-in-memory-db"

[workspace.dependencies.account-db-op]
  path = "project/account/rust/account-db-op"

[workspace.dependencies.account-validator-password]
  path = "project/account/rust/account-validator-password"

[workspace.dependencies.core-crux-types]
  path = "project/core/rust/core-crux-types"

[workspace.dependencies.core-db-op]
  path = "project/core/rust/core-db-op"

[workspace.dependencies.core-event-loop]
  path = "project/core/rust/core-event-loop"

[workspace.dependencies.core-keystore-op]
  path = "project/core/rust/core-keystore-op"

[workspace.dependencies.core-message]
  path = "project/core/rust/core-message"

[workspace.dependencies.core-client-info-op]
  path = "project/core/rust/core-client-info-op"

[workspace.dependencies.core-device-info-op]
  path = "project/core/rust/core-device-info-op"

[workspace.dependencies.core-message-macro]
  path = "project/core/rust/core-message-macro"

[workspace.dependencies.core-muon-op]
  path = "project/core/rust/core-muon-op"

[workspace.dependencies.core-feature-flags]
  path = "project/core/rust/core-feature-flags"

[workspace.dependencies.core-feature-flags-op]
  path = "project/core/rust/core-feature-flags-op"

[workspace.dependencies.muon]
  version = "2.0.4"
  registry = "proton"
  default-features = false

[workspace.dependencies.core-proc]
  path = "project/core/rust/core-proc"

[workspace.dependencies.core-fido-op]
  path = "project/core/rust/core-fido-op"

[workspace.dependencies.core-hv-op]
  path = "project/core/rust/core-hv-op"

[workspace.dependencies.core-key]
  path = "project/core/rust/core-key"

[workspace.dependencies.core-user-manager]
  path = "project/core/rust/core-user-manager"

[workspace.dependencies.core-observability]
  path = "project/core/rust/core-observability"

[workspace.dependencies.core-observability-proc]
  path = "project/core/rust/core-observability-proc"

[workspace.dependencies.core-observability-impl]
  path = "project/core/rust/core-observability-impl"

[workspace.dependencies.core-common-types]
  path = "project/core/rust/core-common-types"

[workspace.dependencies.core-logging]
  path = "project/core/rust/core-logging"

[workspace.dependencies.core-logging-op]
  path = "project/core/rust/core-logging-op"

[workspace.dependencies.core-validator]
  path = "project/core/rust/core-validator"

[workspace.dependencies.lattice]
  path = "project/core/rust/lattice"

[workspace.dependencies.proton-crypto-account]
  # Use experimental version based on rprp instead of gopenpgp-sys.
  version = "0.17.0"
  default-features = false
  features = ["rustpgp"]
  registry = "proton"

[workspace.dependencies.proton-crypto-subtle]
  version = "0.2.1"
  registry = "proton"

[workspace.dependencies.proton-crypto]
  # Use experimental version based on rprp instead of gopenpgp-sys.
  version = "0.12.0"
  default-features = false
  features = ["rustpgp"]
  registry = "proton"

[workspace.dependencies.crux_core]
  git = "https://github.com/redbadger/crux"
  rev = "cb3cc8f7807d3fe4c6e13ffe774367859af8cdaa"
  features = ["facet_typegen"]

[workspace.dependencies.facet]
  version = "=0.31"
  features = ["chrono", "time"]

[workspace.dependencies.uniffi]
  version = "0.30"

[workspace.dependencies.serde]
  version = "1"
  features = ["derive"]

[workspace.dependencies.serde_json]
  version = "1"

[workspace.dependencies.serde_repr]
  version = "0.1"

[workspace.dependencies.serde_with]
  version = "3"

[workspace.dependencies.thiserror]
  version = "2"

[workspace.dependencies.tracing]
  version = "0.1"

[workspace.dependencies.tracing-android]
  version = "0.2"

[workspace.dependencies.tracing-oslog]
  version = "0.3.0"

[workspace.dependencies.cfg-if]
  version = "1.0.4"

[workspace.dependencies.derive_more]
  version = "2"
  features = ["full"]

[workspace.dependencies.fancy-regex]
  version = "0.16"

[workspace.dependencies.secrecy]
  version = "0.10"

[workspace.dependencies.num_enum]
  version = "0.7"

[workspace.dependencies]
  flume = "0.12"

[workspace.lints.clippy]
  all = "deny"

[workspace.lints.rustdoc]
  private_intra_doc_links = "allow"
  broken_intra_doc_links = "deny"

[profile.android]
  inherits = "release"
  panic = "abort"
  # Strip symbols from binary.
  strip = true
  # Optimize for binary size, but also turn off loop vectorization.
  opt-level = "z"
  lto = true
  incremental = false
  codegen-units = 1
